--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -814,6 +814,7 @@
   <!--conversation_item_received-->
   <string name="conversation_item_received__contact_photo_description">連絡先の写真</string>
   <!--audio_view-->
+  <string name="audio_view__play_pause_accessibility_description">再生 ... 停止</string>
   <string name="audio_view__download_accessibility_description">ダウンロード</string>
   <!--QuoteView-->
   <string name="QuoteView_audio">音声</string>
