--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -129,8 +129,8 @@
   <string name="ContactShareEditActivity_type_missing">Другой</string>
   <string name="ContactShareEditActivity_invalid_contact">Выбранный контакт недействителен</string>
   <!--ConversationItem-->
-  <string name="ConversationItem_error_not_delivered">Не отправлено, нажмите для деталей</string>
-  <string name="ConversationItem_received_key_exchange_message_tap_to_process">Получено сообщение обмена ключами. Нажмите, чтобы его обработать.</string>
+  <string name="ConversationItem_error_not_delivered">Не отправлено. Подробнее…</string>
+  <string name="ConversationItem_received_key_exchange_message_tap_to_process">Получено сообщение обмена ключами. Обработать?</string>
   <string name="ConversationItem_group_action_left">%1$s покинул (-а) группу.</string>
   <string name="ConversationItem_click_to_approve_unencrypted">Не отправлено. Отправить незащищённым?</string>
   <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Отправить как незашифрованное SMS?</string>
@@ -331,11 +331,11 @@
   <string name="ExperienceUpgradeActivity_textsecure_is_now_called_signal">TextSecure и RedPhone объединились в одно приложение для приватного общения в любых ситуациях: Signal</string>
   <string name="ExperienceUpgradeActivity_welcome_to_signal_excited">Добро пожаловать в Signal!</string>
   <string name="ExperienceUpgradeActivity_textsecure_is_now_signal">Теперь TextSecure — это Signal.</string>
-  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure и RedPhone объединились в одно приложение: Signal. Нажмите, чтобы узнать больше.</string>
+  <string name="ExperienceUpgradeActivity_textsecure_is_now_signal_long">TextSecure и RedPhone объединились в одно приложение: Signal. Узнать больше…</string>
   <string name="ExperienceUpgradeActivity_say_hello_to_video_calls">Знакомьтесь — защищённые видео-звонки.</string>
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calls">Теперь Signal поддерживает защищённые видеозвонки. Начните звонок Signal как обычно, нажмите кнопку видео и помашите собеседнику.</string>
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling">Теперь Signal поддерживает защищённые видеозвонки.</string>
-  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Теперь Signal поддерживает защищённые видеозвонки. Нажмите, чтобы узнать больше.</string>
+  <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Теперь Signal поддерживает защищённые видеозвонки. Узнать больше…</string>
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Готовы к крупному плану?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Теперь вы можете создать свой профиль с именем и фотографией, которые увидят ваши друзья в Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Профили Signal находятся здесь</string>
@@ -454,7 +454,7 @@
   <!--NotificationMmsMessageRecord-->
   <string name="NotificationMmsMessageRecord_multimedia_message">MMS-сообщение</string>
   <string name="NotificationMmsMessageRecord_downloading_mms_message">Скачивание MMS-сообщения</string>
-  <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Ошибка при скачивании MMS-сообщения; нажмите, чтобы повторить</string>
+  <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Ошибка при скачивании MMS-сообщения. Повторить?</string>
   <!--MediaPickerActivity-->
   <string name="MediaPickerActivity_send_to">Отправить %s</string>
   <string name="MediaPickerActivity__menu_open_camera">Открыть камеру</string>
@@ -641,7 +641,7 @@
   <string name="SmsMessageRecord_received_key_exchange_message_for_invalid_protocol_version">
 Получено сообщение обмена ключами для неверной версии протокола.
 </string>
-  <string name="SmsMessageRecord_received_message_with_new_safety_number_tap_to_process">Получено сообщение с новым кодом безопасности. Нажмите, чтобы обработать и отобразить сообщение. </string>
+  <string name="SmsMessageRecord_received_message_with_new_safety_number_tap_to_process">Получено сообщение с новым кодом безопасности. Обработать и показать его?</string>
   <string name="SmsMessageRecord_secure_session_reset">Вы сбросили защищенный сеанс.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s сбросил(-а) защищённый сеанс.</string>
   <string name="SmsMessageRecord_duplicate_message">Дубликат сообщения.</string>
@@ -685,7 +685,7 @@
   <string name="ThreadRecord_message_could_not_be_processed">Не удалось обработать сообщение</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Обновление Signal</string>
-  <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Доступна новая версия Signal, нажмите, чтобы обновиться</string>
+  <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Доступна новая версия Signal. Обновиться?</string>
   <!--UnknownSenderView-->
   <string name="UnknownSenderView_block_s">Заблокировать %s?</string>
   <string name="UnknownSenderView_blocked_contacts_will_no_longer_be_able_to_send_you_messages_or_call_you">Заблокированные контакты больше не смогут отправлять вам сообщения или звонить вам.</string>
@@ -949,7 +949,7 @@
   <string name="IdentityUtil_unverified_banner_one">Ваш код безопасности с %s изменился и перестал считаться подтверждённым</string>
   <string name="IdentityUtil_unverified_banner_two">Ваши коды безопасности с %1$s и %2$s перестали считаться подтверждёнными</string>
   <string name="IdentityUtil_unverified_banner_many">Ваши коды безопасности с %1$s, %2$s и %3$s перестали считаться подтверждёнными</string>
-  <string name="IdentityUtil_unverified_dialog_one">Ваш код безопасности с %1$s изменился и более не считается подтвержденным. Это может означать, что кто-то пытается перехватить вашу переписку и звонки или что %1$s просто переустановил(-а) Signal.</string>
+  <string name="IdentityUtil_unverified_dialog_one">Ваш код безопасности с %1$s изменился и более не считается подтверждённым. Это может означать, что кто-то пытается перехватить вашу переписку и звонки или что %1$s просто переустановил(-а) Signal.</string>
   <string name="IdentityUtil_unverified_dialog_two">Ваши коды безопасности с %1$s и %2$s изменились и больше не считаются подтверждёнными. Это означает, что либо вашу переписку и звонки пытаются перехватить, либо они просто переустановили Signal.</string>
   <string name="IdentityUtil_unverified_dialog_many">Ваши коды безопасности с %1$s, %2$s и %3$s изменились и более не считаются подтверждёнными. Это означает, что либо вашу переписку и звонки пытаются перехватить, либо они просто переустановили Signal.</string>
   <string name="IdentityUtil_untrusted_dialog_one">Ваш код безопасности с %s только что изменился.</string>
@@ -1305,14 +1305,14 @@
   <!--reminder_header-->
   <string name="reminder_header_outdated_build">Ваша версия Signal скоро устареет</string>
   <plurals name="reminder_header_outdated_build_details">
-    <item quantity="one">Ваша версия Signal перестанет работать через %d день. Нажмите, чтобы обновиться до последней версии.</item>
-    <item quantity="few">Ваша версия Signal перестанет работать через %d дня. Нажмите, чтобы обновиться до последней версии.</item>
-    <item quantity="many">Ваша версия Signal перестанет работать через %d дней. Нажмите, чтобы обновиться до последней версии.</item>
-    <item quantity="other">Ваша версия Signal перестанет работать через %d дней. Нажмите, чтобы обновиться до последней версии.</item>
+    <item quantity="one">Ваша версия Signal перестанет работать через %d день. Обновиться до последней версии?</item>
+    <item quantity="few">Ваша версия Signal перестанет работать через %d дня. Обновиться до последней версии?</item>
+    <item quantity="many">Ваша версия Signal перестанет работать через %d дней. Обновиться до последней версии?</item>
+    <item quantity="other">Ваша версия Signal перестанет работать через %d дней. Обновиться до последней версии?</item>
   </plurals>
-  <string name="reminder_header_outdated_build_details_today">Ваша версия Signal перестанет работать сегодня. Нажмите, чтобы обновиться до последней версии.</string>
+  <string name="reminder_header_outdated_build_details_today">Ваша версия Signal перестанет работать сегодня. Обновиться до последней версии?</string>
   <string name="reminder_header_expired_build">Ваша версия Signal устарела!</string>
-  <string name="reminder_header_expired_build_details">Сообщения более не будут отправляться. Нажмите, чтобы обновиться до последней версии.</string>
+  <string name="reminder_header_expired_build_details">Сообщения более не будут отправляться. Обновиться до последней версии…</string>
   <string name="reminder_header_sms_default_title">Использовать для всех SMS</string>
   <string name="reminder_header_sms_default_text">Нажмите, чтобы сделать Signal своим приложением для SMS по умолчанию</string>
   <string name="reminder_header_sms_import_title">Импортировать SMS из системы</string>
