Consolidate profile display labels.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1633,6 +1633,7 @@
     <string name="prompt_passphrase_activity__tap_to_unlock">TAP TO UNLOCK</string>
     <string name="RegistrationLockDialog_reminder">Reminder:</string>
     <string name="recipient_preferences__about">About</string>
+    <string name="Recipient_unknown">Unknown</string>
     <!-- EOF -->
 
 </resources>
